deny_access-ufw
# UFW
https://www.smarthomebeginner.com/traefik-docker-security-best-practices/

# Keep our knees healthy
ufw allow ssh

# Only rules we need
/etc/ufw/after.rules

#########################################
# BEGIN UFW AND DOCKER
*filter
:ufw-user-forward - [0:0]
:ufw-docker-logging-deny - [0:0]
:DOCKER-USER - [0:0]
-A DOCKER-USER -j ufw-user-forward

-A DOCKER-USER -j RETURN -s 10.0.0.0/8
-A DOCKER-USER -j RETURN -s 172.16.0.0/12
-A DOCKER-USER -j RETURN -s 192.168.0.0/16

-A DOCKER-USER -p udp -m udp --sport 53 --dport 1024:65535 -j RETURN

-A DOCKER-USER -j ufw-docker-logging-deny -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -d 192.168.0.0/16
-A DOCKER-USER -j ufw-docker-logging-deny -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -d 10.0.0.0/8
-A DOCKER-USER -j ufw-docker-logging-deny -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -d 172.16.0.0/12
-A DOCKER-USER -j ufw-docker-logging-deny -p udp -m udp --dport 0:32767 -d 192.168.0.0/16
-A DOCKER-USER -j ufw-docker-logging-deny -p udp -m udp --dport 0:32767 -d 10.0.0.0/8
-A DOCKER-USER -j ufw-docker-logging-deny -p udp -m udp --dport 0:32767 -d 172.16.0.0/12

-A DOCKER-USER -j RETURN

-A ufw-docker-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW DOCKER BLOCK] "
-A ufw-docker-logging-deny -j DROP

COMMIT
# END UFW AND DOCKER
######################################

# Turning on ufw 
ufw enable

# Allow [it's forward, not input!]
ufw route allow proto tcp from 193.77.64.75 to any port 80

# Check rules
ufw status numbered verbose

# Collect logs
/var/log/syslog: May 14 13:52:05 tmp-choooze-traefik kernel: [   83.207720] [UFW DOCKER BLOCK] IN=ens4 OUT=br-66069ad7629f MAC=42:01:0a:a6:00:0e:42:01:0a:a6:00:01:08:00 SRC=193.77.64.75 DST=172.18.0.2 LEN=60 TOS=0x00 PREC=0x00 TTL=58 ID=52161 DF PROTO=TCP SPT=55446 DPT=80 WINDOW=64240 RES=0x00 SYN URGP=0
